<resources>
    <string name="app_name">Medisys</string>
    <string name="username_placeholder">Usuario</string>
    <string name="password_placeholder">Contraseña</string>
    <string name="login_button_text">Ingresar</string>
    <string name="drawer_open">Menu Lateral Abierto</string>
    <string name="drawer_close">Menu Lateral Cerrado</string>
    <string name="patient_id_label">DNI</string>
    <string name="age_label">Edad</string>
    <string name="birth_date_label">Fecha de Nacimiento</string>
    <string name="address_label">Domicilio</string>
    <string name="phone_label">Telefono</string>
    <string name="mobile_phone_label">Celular</string>
    <string name="insurance_label">Obra Social</string>
    <string name="insurance_number_label">Nro Afiliado</string>
    <string name="patient_history_btn_text">Historia Clinica</string>
    <string name="save_patient_btn_text">Guardar</string>
    <string name="patient_first_name_label">Nombre</string>
    <string name="patient_last_name_label">Apellido</string>
    <string name="street_label">Calle</string>
    <string name="street_number_label">Nro</string>
    <string name="floor_label">Piso</string>
    <string name="apartment_label">Dpto</string>
    <string name="town_label">Localidad</string>
    <string name="department_label">Departamento</string>
    <string name="county_label">Provincia</string>

</resources>
