<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eselman.medisys.PatientDetailActivity">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tool_bar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">
            <!-- Linear Layout for First Name and Last Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/label_separator_padding"
                    android:id="@+id/patientFirstNameLabel"
                    android:text="@string/patient_first_name_label"
                    android:gravity="center_vertical">
                </TextView>
                <EditText
                    android:id="@+id/patientFirstNameEditable"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    tools:text="Evangelina">
                </EditText>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/label_separator_padding"
                    android:id="@+id/patientLastNameLabel"
                    android:text="@string/patient_last_name_label"
                    android:gravity="center_vertical">
                </TextView>
                <EditText
                    android:id="@+id/patientLastNameEditable"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    tools:text="Selman">
                </EditText>
            </LinearLayout>

            <!-- Linearlayout for idNumber -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/patientIdLabelEditable"
                    android:text="@string/patient_id_label"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/label_separator_padding">
                </TextView>

                <EditText
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/patientIdNumberEditable"
                    tools:text="29561830">
                </EditText>
            </LinearLayout>

            <!-- Linearlayout for Birth Date -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/label_separator_padding"
                    android:id="@+id/birthDateLabelEditable"
                    android:text="@string/birth_date_label"
                    android:gravity="center_vertical">
                </TextView>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/patientBirthDateEditable"
                    tools:text="23/12/1982"
                    android:gravity="center_vertical">
                </TextView>
                <ImageButton
                    android:id="@+id/patientBirthDatePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/calendar"
                    android:theme="@style/AppTheme.Button"
                    android:gravity="center_vertical"
                    android:elevation="@dimen/image_button_elevation"/>
            </LinearLayout>

            <!-- Linearlayout for Address -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/label_separator_padding"
                    android:id="@+id/streetLabel"
                    android:text="@string/street_label"
                    android:gravity="center_vertical">
                </TextView>
                <EditText
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/patientStreet"
                    tools:text="Miguez">
                </EditText>
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/label_separator_padding"
                    android:id="@+id/streetNumberLabel"
                    android:text="@string/street_number_label"
                    android:gravity="center_vertical">
                </TextView>
                <EditText
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/patientStreetNumber"
                    tools:text="506">
                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/label_separator_padding"
                    android:id="@+id/floorLabel"
                    android:text="@string/floor_label"
                    android:gravity="center_vertical">
                </TextView>
                <EditText
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/patientFloor"
                    tools:text="">
                </EditText>

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/label_separator_padding"
                    android:id="@+id/apartmentLabel"
                    android:text="@string/apartment_label"
                    android:gravity="center_vertical">
                </TextView>
                <EditText
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/patientApartment"
                    tools:text="">
                </EditText>
            </LinearLayout>

            <!-- Linearlayout for Phone and Mobile Phone -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/label_separator_padding"
                    android:id="@+id/phoneLabelEditable"
                    android:text="@string/phone_label"
                    android:gravity="center_vertical">
                </TextView>

                <EditText
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/patientPhoneEditable"
                    tools:text="442125">
                </EditText>

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/label_separator_padding"
                    android:id="@+id/mobilePhoneLabelEditable"
                    android:text="@string/mobile_phone_label"
                    android:gravity="center_vertical">
                </TextView>

                <EditText
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/patientMobilePhoneEditable"
                    tools:text="2634442125">
                </EditText>
            </LinearLayout>

            <!-- Linearlayout for Insurance -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/label_separator_padding"
                    android:id="@+id/insuranceLabelEditable"
                    android:text="@string/insurance_label"
                    android:gravity="center_vertical">
                </TextView>

                <EditText
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/patientInsuranceEditable"
                    tools:text="OSDE">
                </EditText>

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/label_separator_padding"
                    android:id="@+id/insuranceNumberLabelEditable"
                    android:text="@string/insurance_number_label"
                    android:gravity="center_vertical">
                </TextView>

                <EditText
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/patientInsuranceNumberEditable"
                    tools:text="0800000">
                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/savePatientBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_patient_btn_text"
                android:theme="@style/AppTheme.Button">
            </Button>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>